<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="28dp"
    android:paddingEnd="28dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="36dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/template_qr"
            /> <!-- placeholder image -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/roundedcornerwhite"
                android:paddingStart="16dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/url"
                    android:fontFamily="@font/metropolis_semibold"
                    >
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            >
            <!-- Download Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/downloadButton"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:text="@string/download"
                android:textSize="16sp"
                android:fontFamily="@font/metropolis_semibold"
                android:textAllCaps="false"
                android:textColor="@color/background"
                android:background="@drawable/roundedcornerblues"
                android:backgroundTint="@color/primary"
                android:layout_marginEnd="12dp"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp"
                app:cornerRadius="14dp">
            </com.google.android.material.button.MaterialButton>

            <!-- Share Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/shareButton"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedcornerwhite"
                android:text="@string/share"
                android:textSize="16sp"
                android:fontFamily="@font/metropolis_semibold"
                android:layout_marginStart="12dp"
                android:backgroundTint="@color/white"
                android:textAllCaps="false"
                android:textColor="@color/primary">
            </com.google.android.material.button.MaterialButton>

        </LinearLayout>




    </LinearLayout>

    


</LinearLayout>